--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@skyrim-platform/console-util",
-    "version": "2.3.0",
+    "version": "1.3.2",
     "description": "TypeScript type definitions for the ConsoleUtil Skyrim utility",
     "main": "",
     "types": "index.d.ts",
@@ -13,7 +13,8 @@
     "scripts": {
         "build": "tsc",
         "watch": "tsc --watch",
-        "publish": "npm run build && cpy \"dist/*\" . && npm publish && npm run cleanup",
+        "npm:publish": "npm run build && npm run prepare && npm publish --access=public && npm run cleanup",
+        "prepare": "cpy \"dist/*\" .",
         "cleanup": "rimraf \"*.js\" \"*.ts\" dist/"
     },
     "devDependencies": {
